<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>iped</groupId>
    <artifactId>iped-parent</artifactId>
    <version>3.18.15</version>
    <packaging>pom</packaging>
    
    <modules>
        <module>iped-api</module>
        <module>iped-utils</module>
        <module>iped-parsers</module>
        <module>iped-viewers</module>
        <module>iped-carvers</module>
        <module>iped-geo</module>
        <module>iped-engine</module>
        <module>iped-app</module>
    </modules>
    
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <resources.dir>${basedir}/resources</resources.dir>
        <release.dir>${project.build.directory}/release/iped-${project.version}</release.dir>  
        <lib.dir>${release.dir}/lib</lib.dir>
        <tools.dir>${release.dir}/tools</tools.dir>
        <conf.dir>${release.dir}/conf</conf.dir>
        <optional.dir>${release.dir}/../optional_jars</optional.dir>
        
        <!--dependencies-->
        <tika.version>1.20</tika.version>
        <lucene.version>5.5.5</lucene.version>
        <sleuthkit.version>4.6.5-p05</sleuthkit.version>
        <libreoffice.version>5.1.4</libreoffice.version>
        <slf4j.version>1.7.25</slf4j.version>
        <log4j.version>2.17.0</log4j.version>
        <junit.version>4.12</junit.version>
        <icepdf.version>6.3.2</icepdf.version>
        <xerial.sqlite.version>3.25.2</xerial.sqlite.version>
        <dockingframes.version>1.1.1</dockingframes.version>
        <telegram.impl.version>1.0.8-SNAPSHOT</telegram.impl.version>
    </properties>

    <repositories>
    	<repository>
            <id>central</id>
            <name>Maven Repository Switchboard</name>
            <layout>default</layout>
            <url>https://repo1.maven.org/maven2</url>
        </repository>
        <repository>
        	<id>mvn-repo</id>
        	<url>https://gitlab.com/iped-project/iped-maven/raw/master</url>
        	<releases>
            	<enabled>true</enabled>
        	</releases>
        	<snapshots>
            	<enabled>true</enabled>
        	</snapshots>
    	</repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-web</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency> 
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jul-to-slf4j</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    
    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>findbugs-maven-plugin</artifactId>
                <version>3.0.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>2.10</version>
                <executions>
                	<execution>
                        <id>copy-modules-sources</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <classifier>sources</classifier>
                            <outputDirectory>${release.dir}/sources</outputDirectory>
                            <overWriteReleases>false</overWriteReleases>
                            <overWriteSnapshots>false</overWriteSnapshots>
                            <overWriteIfNewer>true</overWriteIfNewer>
                            <includeGroupIds>iped</includeGroupIds>
                        </configuration>
                    </execution>
    			</executions>
    		</plugin>
        </plugins>
    </build>
    		
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jxr-plugin</artifactId>
                <version>2.5</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>2.8</version>
                <configuration>
                    <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
                </configuration>                
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>2.13</version>
                <configuration>
                    <configLocation>${resources.dir}/checkstyle/asap-checker.xml</configLocation>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.10.1</version>
                <configuration>
                    <failOnError>false</failOnError>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
</project>
